unpackaged/main/default/objects/FLAGS__Follow_Up_Process__c/FLAGS__Follow_Up_Process__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store custom follow up process settings.</description>
    <label>Case Flags Follow Up Process</label>
</CustomObject>