unpackaged/main/default/objects/FLAGS__Follow_Up_Process__c/fields/FLAGS__Enable_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Enable_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this flag will use the follow up process.</description>
    <label>Enable follow up process</label>
    <type>Checkbox</type>
</CustomField>