unpackaged/main/default/objects/FLAGS__Follow_Up_Process__c/fields/FLAGS__Time_Unit__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Time_Unit__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Describes time unit to be used</description>
    <label>Time Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>